<resources>
    <string name="app_name">Phonebook</string>

    <string name="contact_call">Call</string>
    <string name="contact_sms">SMS</string>
    <string name="contact_email">Email</string>
    <string name="contact_edit">Edit</string>

    <string name="dialog_loading_title">Loading</string>
    <string name="dialog_loading_wait">Please wait&#8230;</string>

    <string name="action_add_contact">Add contact</string>
    <string name="action_get_contacts">Get contacts</string>

    <string name="noData">Oops, no result found. :(</string>

    <string name="dialog_title_create">Create contact</string>
    <string name="dialog_title_edit">Edit contact</string>
    <string name="dialog_btn_create">Create</string>
    <string name="dialog_btn_update">Update</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_hint_name">Name</string>
    <string name="dialog_hint_email">Email address</string>
    <string name="dialog_hint_phone">Phone number</string>

    <string name="toast_blank_contact">Contact name is blank</string>
    <string name="toast_blank_email">Email address is blank</string>
    <string name="toast_blank_phone">Phone number is blank</string>

    <string name="imageView">imageView</string>
</resources>
